# Varify

./: .gitignore  .prettierignore  Dockerfile  MANIFEST.in  README.md  build-report.js  environment.yml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  vitest.config.js
.github/workflows/: conda-publish.yml  docker-publish.yml  javascript-tests.yml  python-tests.yml
conda/: build.sh  conda_build_config.yaml  meta.yaml
recipe/: meta.yaml
src/varify/: __init__.py  combine.py  parser.py  plots.py  report.py  report_restored.py  varify.py  vcf_extractor.py
src/varify/assets/css/: index.css  tailwind.css  varify-report.css
src/varify/assets/js/: index-test-aggrid-alpine.js  index-test-all-libs.js  index-test-igv-only.js  index-test-minimal.js  index.js
src/varify/cli/: commands.py
src/varify/core/: __init__.py  vcf_parser.py  vcf_processor.py
src/varify/core/callers/: __init__.py  base.py  cutesv.py  dysgu.py  generic.py  gridss.py  sniffles.py  tiddit.py
src/varify/core/pipeline/: __init__.py  aggregator.py  caller_processor.py  general_processor.py  reader.py  writer.py
src/varify/core/vcf_types/: __init__.py  base.py  bcf.py  survivor.py
src/varify/reporting/: __init__.py  html_generator.py
src/varify/static/: file-upload-ui.js  igv-indexeddb-loader.js  indexeddb-manager.js  vcf-parser-old.js
src/varify/templates/: combined_report_template.html  custom_template.html  igv_indexeddb_section.html  report-template.html
tests/: conftest.py  doubles.py
tests/core/: test_enriched_vcf.py  test_vcf_parser.py  test_vcf_processor.py
tests/core/callers/: __init__.py  test_cutesv.py  test_dysgu.py  test_generic.py  test_gridss.py  test_sniffles.py  test_tiddit.py
tests/core/pipeline/: test_aggregator.py  test_general_processor.py  test_reader.py  test_writer.py
tests/core/vcf_types/: test_bcf.py  test_survivor.py
tests/fixtures/: all_writable_fields.vcf  bcftools.stats  bcftools_concat.bcftools_stats.txt  bcftools_concat.vcf  bcftools_concat.vcf.gz.tbi  confidence_intervals.vcf  format_fields.vcf  minimal.vcf  minimal_deletion.vcf  multi_chrom.vcf  negative_svlen.vcf  none_values.vcf  re-yeast_sample-illumina-false-delly.vcf  sample.vcf  survivor.stats  survivor_merge.stats  survivor_merge_survivor_merge_filtered.vcf
tests/js/: setup.js
tests/js/components/: VariantTableAGGrid.test.js
tests/js/components/table/: TableExporter.test.js
tests/js/core/: IGVLoader.test.js  IndexedDBManager.test.js  VCFParser.test.js
tests/js/core/parsers/: GenotypeParser.test.js  HeaderParser.test.js  VariantParser.test.js
tests/js/core/query/: VariantFilter.test.js
tests/js/services/: MetadataService.test.js
tests/js/utils/: StatisticsUtils.test.js
tests/reporting/: test_report_generation.py
(+60 files in other folders)
